[package]
name = "araymarch"
version = "0.1.0"
authors = ["marcp <32434918+Ar3sion@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glutin = "0.26.0"
cgmath = "0.18.0"
spin_sleep = "1.0.0"
